--- a/backend.js/front/cadastro.html
+++ b/backend.js/front/cadastro.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leish Software</title>
-    <script src="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\cadastro.js"></script>
-    <link rel="stylesheet" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\cadastro.css">
-    <link rel="icon" type="icon/ico" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 214850.png">
+    <script src="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\serve.js\server.js"></script>
+    <link rel="stylesheet" href="C:\Users\gabri\Documents\GitHub\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\backend.js\front\cadastro.css">
+    <link rel="icon" type="icon/ico" href=C:\Users\gabri\Documents\GitHub\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\backend.js\front\cadastro.css>
    
  
 </head>
 <body>
     <div>
-                <img class="imgesquerda" src="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 214850.png">
+                <img class="imgesquerda" src="C:\Users\gabri\Documents\GitHub\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 214850.png">
             
         </div>
         <div><h1 Class="container">Leish Software</h1></div>
@@ -26,8 +26,8 @@
                 <label for="password"><input class="bg-gray border-none color-white" autocomplete="off" type="password" id="f_password" name="password" placeholder="Senha"></label>
                 <label for="confirm-password"><input class="bg-gray border-none color-white" autocomplete="off" type="password" id="f_confirm_password" name="confirm-password" placeholder="Confirmar senha"></label>
 
-                <input class="inline-block w-200 m-auto bt-1 px-2 py-1 inline-block" value="Cadastre-se" id="bt_cadastrar" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\pagina_inicial.html"> 
-                <a href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\login.html" class="m-1 inline-block w-200 m-auto bt-2 px-2 py-1 inline-block">Página de login</a>
+                <input class="inline-block w-200 m-auto bt-1 px-2 py-1 inline-block" value="Cadastrar" id="bt_cadastrar" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\serve.js\public\pagina_inicial.html"> 
+                <a href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\server.js\public\login.html" class="m-1 inline-block w-200 m-auto bt-2 px-2 py-1 inline-block">Página de login</a>
             </form>
         </main>
     </div>
