--- a/backend.js/front/login.html
+++ b/backend.js/front/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leish Software</title>
-    <link rel="stylesheet" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\login.css">
+    <link rel="stylesheet" href="C:\Users\gabri\Documents\GitHub\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\backend.js\front\login.css">
     <link rel="icon" type="icon/ico" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 214850.png"> 
 </head>
 <body>
