--- a/codigo-fonte/login.html
+++ b/codigo-fonte/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leish Software</title>
-    <link rel="stylesheet" href="C:\Users\gabri\Documents\GitHub\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\login.css">
+    <link rel="stylesheet" href="/codigo-fonte/login.css">
     <link rel="icon" type="icon/ico" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 214850.png"> 
 </head>
 <body>
 <header class="logo"><div><h1 Class="container">Leish Software</h1></div>
-   <div><img class="logo" src="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 214850.png" alt="Logo da Leish Software"></div></header>
+   <div><img class="logo" src="/codigo-fonte/img/logo.png" alt="Logo da Leish Software"></div></header>
     <div class="container">
         <h1>Login</h1>
         <label class="label" for="email">E-mail</label>
@@ -19,13 +19,13 @@
         
         <button id="bt_login">Entrar</button>
         
-        <a id="link_cadastro" href="cadastro.html">Cadastre-se</a>
+        <a id="link_cadastro" href="/codigo-fonte/cadastro.html">Cadastre-se</a>
     </div><div>
-    <img class="fundo" src="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 222321.png" alt="veterinario">
+    <img class="fundo" src="/codigo-fonte/img/veterinario.png"veterinario">
 </div>
 
 </body>
-<footer class="rodape"> <img class="img" src="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\documentos\img\Captura de tela 2023-09-26 221123.png"> </footer>
+<footer class="rodape"> <img class="img" src="/codigo-fonte/img/endereco.png"> </footer>
     <script>
         if (localStorage.dados == undefined)
             localStorage.setItem('dados', '[]')
