--- a/codigo-fonte/cadastro.html
+++ b/codigo-fonte/cadastro.html
@@ -5,69 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leish Software</title>
-    <script src="/backend.js/nodemoldels/routes/index.js"></script>
+    <script src="/backend.js/index.js"></script>
     <link rel="stylesheet" href="/codigo-fonte/cadastro.css">
     <link rel="icon" type="icon/ico" href="/codigo-fonte/img/logo.png">
-   
- 
 </head>
 <body>
     <div>
-                <img class="imgesquerda" src="/codigo-fonte/img/logo.png">
-            
-        </div>
-        <div><h1 Class="container">Leish Software</h1></div>
-        <main class="main">
-            <h1>Crie uma conta</h1>
-            <form class="grid">
-                <label for="name"><input class="bg-gray border-none color-white" autocomplete="off" type="text" id="f_name" name="name" placeholder="Nome"></label>
-                <label for="Sobrenome"><input class="bg-gray border-none color-white" autocomplete="off" type="text" id="f_sobrenome" name="Sobrenome" placeholder="Sobrenome"></label>
-                <label for="email"><input class="bg-gray border-none color-white" autocomplete="off" type="email" id="f_email" name="email" placeholder="E-mail"></label>
-                <label for="password"><input class="bg-gray border-none color-white" autocomplete="off" type="password" id="f_password" name="password" placeholder="Senha"></label>
-                <label for="confirm-password"><input class="bg-gray border-none color-white" autocomplete="off" type="password" id="f_confirm_password" name="confirm-password" placeholder="Confirmar senha"></label>
-
-                <input class="inline-block w-200 m-auto bt-1 px-2 py-1 inline-block" value="Cadastrar" id="bt_cadastrar" href="C:\Users\gabri\OneDrive\Área de Trabalho\pmv-ads-2023-2-e5-proj-empext-t1-pmv-ads-2023-2-e5-proj-controledzoon\codigo-fonte\serve.js\public\pagina_inicial.html"> 
-                <a href="/codigo-fonte/login.html" class="m-1 inline-block w-200 m-auto bt-2 px-2 py-1 inline-block">Página de login</a>
-            </form>
-        </main>
+        <img class="imgesquerda" src="/codigo-fonte/img/logo.png">
     </div>
+    <div><h1 Class="container">Leish Software</h1></div>
+    <main class="main">
+        <h1>Crie uma conta</h1>
+        <form id="cadastro-form" class="grid" method="POST" action="/cadastrar">
+            <label for="name"><input class="bg-gray border-none color-white" autocomplete="off" type="text" id="f_name" name="name" placeholder="Nome"></label>
+            <label for="Sobrenome"><input class="bg-gray border-none color-white" autocomplete="off" type="text" id="f_sobrenome" name="Sobrenome" placeholder="Sobrenome"></label>
+            <label for="email"><input class="bg-gray border-none color-white" autocomplete="off" type="email" id="f_email" name="email" placeholder="E-mail"></label>
+            <label for="password"><input class="bg-gray border-none color-white" autocomplete="off" type="password" id="f_password" name="password" placeholder="Senha"></label>
+            <label for="confirm-password"><input class="bg-gray border-none color-white" autocomplete="off" type="password" id="f_confirm_password" name="confirm-password" placeholder="Confirmar senha"></label>
 
-    <script>
-        if(localStorage.dados === undefined) {
-            localStorage.setItem('dados', '[]');
-        }
+            <input class="inline-block w-200 m-auto bt-1 px-2 py-1 inline-block" type="submit" value="Cadastrar">
+            <a href="/codigo-fonte/login.html" class="m-1 inline-block w-200 m-auto bt-2 px-2 py-1 inline-block">Página de login</a>
+        </form>
+    </main>
+</div>
 
-        function salvar(nome, sobrenome, email, senha, confirmar_senha) {
-            let obj = {
-                nome: nome,
-                sobrenome: sobrenome,
-                email: email,
-                senha: senha,
-                confirmar_senha : confirmar_senha 
-            };
-            let j = JSON.parse(localStorage.dados);
-            j.push(obj);
-            localStorage.setItem('dados', JSON.stringify(j));
-        }
+<script>
+// Com a Função para enviar os dados para o servidor
+async function cadastrar() {
+    const nome = document.getElementById('f_name').value;
+    const sobrenome = document.getElementById('f_sobrenome').value;
+    const email = document.getElementById('f_email').value;
+    const senha = document.getElementById('f_password').value;
+    const confirmarSenha = document.getElementById('f_confirm_password').value;
 
-        function cadastrar() {
-            let nome = f_name.value;
-            let sobrenome = f_sobrenome.value;
-            let email = f_email.value;
-            let pass = f_password.value;
-            let confirmar_senha = inputConfirmar.value;
-            salvar(nome, sobrenome, email, pass, confirmar_senha);
-        }
+    if (!nome || !sobrenome || !email || !senha || !confirmarSenha) {
+        alert('Por favor, preencha todos os campos.');
+        return;
+    }
 
-        bt_cadastrar.onclick = function(e) {
-            if (!JSON.parse(localStorage.dados).find(user => user.email === f_email.value)) {
-                alert('Cadastrado');
-                cadastrar();
-                window.location.href = "login.html";
-            } else {
-                alert('Usuário já existe');
-            }
+    if (senha !== confirmarSenha) {
+        alert('As senhas não coincidem.');
+        return;
+    }
+
+    const dados = {
+        nome,
+        sobrenome,
+        email,
+        senha,
+        confirmarSenha
+    };
+
+    try {
+        const response = await fetch('http://127.0.0.1:3000/cadastrar', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(dados),
+      });
+
+
+        if (response.status === 201) {
+            alert('Cadastrado com sucesso');
+            window.location.href = "login.html";
+        } else {
+            alert('Erro ao cadastrar o usuário');
         }
-    </script>
+    } catch (error) {
+        console.error('Erro ao cadastrar o usuário:', error);
+        alert('Erro ao cadastrar o usuário');
+    }
+}
+
+// Selecione o formulário pelo ID
+const form = document.getElementById('cadastro-form');
+
+// Adicione um ouvinte de evento para o evento de envio do formulário
+form.addEventListener('submit', function(event) {
+  event.preventDefault(); // Impede o envio padrão do formulário
+  cadastrar(); // Chame a função cadastrar
+});
+</script>
 </body>
 </html>
