--- a/codigo-fonte/inicio.html
+++ b/codigo-fonte/inicio.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <header class="logo"><div><h1 class="container">Leish Software</h1></div>
-   <div><img class="logo" src="/codigo-fonte/img/logo.png" alt="Logo da Leish Software"></div></header>
+   <div><img class="logo" src="/codigo-fonte/img/logo.png" alt="Logo da Leish Software" href=""></div></header>
     <div class="container">
 
         <div>
-        <button class="button" id="bt_login" href="">Registro de Exames</button>
+        <button class="button" id="bt_login" href="/codigo-fonte/registro.html">Registro de Exames</button>
         </div>
         <div>
         <button class="button" id="bt_login" href="">Acompanhamento de Pacientes</button>
